--- a/client/src/modules/administration/createAccount/CreateAccount.module.scss
+++ b/client/src/modules/administration/createAccount/CreateAccount.module.scss
@@ -11,6 +11,7 @@
 
 .select {
     width: 200px;
+    margin-bottom: 15px;
 }
 
 .inputNoMargin {
